--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,36 +4,32 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- ================= SEO (CHANGE PER REFLECTION) ================= -->
-  <!-- CHANGE THIS: Page title -->
-  <title>Reflection Title Here — Solitude Reflections · Ninox Antolihao</title>
+  <!-- ================= SEO (SPECIFIC TO THIS REFLECTION) ================= -->
+  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- CHANGE THIS: Short description (1–2 sentences) -->
   <meta name="description"
-        content="Short one-line summary of this reflection for search and social previews.">
+        content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
 
-  <!-- CHANGE THIS: Canonical URL for this page -->
   <link rel="canonical"
-        href="https://stonegrillresto.net/reflections/pages/your-slug-here/read.html">
+        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
-  <!-- CHANGE: title, description, image, url to match this reflection -->
   <meta property="og:type" content="article">
   <meta property="og:title"
-        content="Reflection Title Here — Solitude Reflections">
+        content="The Paradox of God — Solitude Reflections">
   <meta property="og:description"
-        content="Short one-line summary of this reflection for social sharing.">
+        content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta property="og:image"
-        content="https://stonegrillresto.net/reflections/pages/your-slug-here/cover-image.jpg">
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
   <meta property="og:url"
-        content="https://stonegrillresto.net/reflections/pages/your-slug-here/read.html">
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Reflection Title Here">
+  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
   <meta name="twitter:description"
-        content="Short one-line summary of this reflection for social sharing.">
+        content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta name="twitter:image"
-        content="https://stonegrillresto.net/reflections/pages/your-slug-here/cover-image.jpg">
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
 
   <!-- ================= PWA / ICONS (SAME FOR ALL) ================= -->
   <meta name="theme-color" content="#ff6b3d">
@@ -217,9 +213,9 @@
 </head>
 <body>
 
-  <!-- ============ TOP HEADER BAR (SAME FOR ALL PAGES) ============ -->
-  <!-- CHANGE THIS: data-current must match the folder/slug of this reflection -->
-  <div id="reflectionsHeader" data-current="your-slug-here"></div>
+  <!-- ============ TOP HEADER BAR HOOK ============ -->
+  <!-- IMPORTANT: data-current matches this reflection's slug -->
+  <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
 
   <div class="page-spacer"></div>
 
@@ -227,33 +223,37 @@
   <section class="audio-shell">
     <div class="audio-player">
       <audio id="reflectionAudio" controls preload="metadata">
-        <!-- CHANGE THIS: default audio track (Track 1) -->
+        <!-- Default audio track (Track 1) -->
         <source id="audioSource"
-                src="/reflections/pages/your-slug-here/audio-track-1.mp3"
+                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
                 type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
 
     <div class="track-list" id="trackList">
-      <!-- TRACK 1 (CHANGE LABELS + FILE NAME) -->
+      <!-- TRACK 1 -->
       <button class="track-row is-active"
-              data-src="/reflections/pages/your-slug-here/audio-track-1.mp3">
+              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
         <div>
-          <div class="track-main">Track 1 title here</div>
-          <div class="track-meta">Short description of track 1 (voice / style).</div>
+          <div class="track-main">The Paradox of God</div>
+          <div class="track-meta">
+            Main narration — quiet, reflective reading.
+          </div>
         </div>
-        <div class="track-duration">00:00</div>
+        <div class="track-duration">04:08</div>
       </button>
 
-      <!-- TRACK 2 (OPTIONAL – REMOVE IF ONLY 1 TRACK) -->
+      <!-- TRACK 2 -->
       <button class="track-row"
-              data-src="/reflections/pages/your-slug-here/audio-track-2.mp3">
+              data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3?v=1">
         <div>
-          <div class="track-main">Track 2 title here</div>
-          <div class="track-meta">Short description of track 2 (alternate voice / tone).</div>
+          <div class="track-main">The Paradox of God (Alternate Voice)</div>
+          <div class="track-meta">
+            Alternate or cinematic voice version of the same reflection.
+          </div>
         </div>
-        <div class="track-duration">00:00</div>
+        <div class="track-duration">04:33</div>
       </button>
     </div>
   </section>
@@ -262,46 +262,64 @@
   <main class="page-shell">
     <article class="reading-card">
 
-      <!-- CHANGE THIS: Page title and subtitle -->
-      <h1>Reflection Title Here</h1>
+      <h1>The Paradox of God</h1>
       <div class="subtitle">
-        Optional subtitle or tagline for this reflection.<br>
-        (You can remove this line if not needed.)
+        A Solitude Reflection by Ninox Antolihao<br>
+        On belief, truth, and the mystery that cannot be named.
       </div>
 
-      <!-- CHANGE THIS: Actual reflection text -->
+      <!-- Reflection text -->
       <p class="dropcap">
-        First paragraph of your reflection goes here. This line uses a
-        drop cap on the first letter to create a book-like feeling.
+        Anyone who claims to know the full truth about God speaks from
+        illusion. For how can the finite explain the infinite? How can a
+        single mind, bound by language and memory and fear, hold the total
+        knowledge of a reality it did not create?
       </p>
 
       <p>
-        Continue the body text here. Add as many paragraphs as you like.
-        Each paragraph will be spaced nicely for reading, both on mobile
-        and desktop.
+        Yet this is what many religions quietly promise: certainty — a God
+        perfectly mapped, fully defined, with motives explained and plans
+        decoded. Do this, believe this, repeat this, and the mystery becomes
+        manageable, safe, familiar. The story stops being a mirror and
+        hardens into a wall.
       </p>
 
       <p>
-        You can also add <em>emphasis</em>, line breaks, or short sections
-        to guide the reader through your thoughts.
+        But if there is a divine reality, it would not shrink to fit inside
+        our categories. It would not be limited by our metaphors or bound by
+        our scriptures. It would be larger than our favourite story about it
+        — including this one. Any description we give is already too small.
       </p>
 
-      <!-- Add more <p> ... </p> as needed -->
+      <p>
+        This is the paradox: we long to know, to define, to be sure — and
+        yet whatever is truly infinite cannot be fully captured by a mind
+        that forgets, misremembers, and fears. Our language reaches upward
+        like a child’s hand toward the sky: sincere, but never complete.
+      </p>
+
+      <p>
+        Perhaps the honest path is not to cling to perfect answers, but to
+        walk with a humble question. Not “I know what God is,” but
+        “Whatever the Truth is, let it find me changing.” Not a system to
+        defend, but a mystery to live inside.
+      </p>
 
       <hr>
 
-      <!-- CHANGE THIS: Small footer note / disclaimer for this reflection -->
       <p style="font-size:.9rem;color:var(--muted);">
-        This reflection is a personal opinion and exploration. It is not
-        presented as doctrine, official teaching, or professional advice.
+        These thoughts are not theology or doctrine. They are simply one
+        person’s attempt to sit honestly with doubt, faith, and the
+        possibility that the most sacred answer might be:
+        <em>“I do not know — but I am listening.”</em>
       </p>
     </article>
   </main>
 
-  <!-- ============ SHARED HEADER / NAV SCRIPT (DO NOT CHANGE) ============ -->
+  <!-- ============ SHARED HEADER / NAV SCRIPT ============ -->
   <script src="/reflections/assets/reflections-header.js"></script>
 
-  <!-- ============ TRACK SWITCHING LOGIC (SAME FOR ALL PAGES) ============ -->
+  <!-- ============ TRACK SWITCHING LOGIC ============ -->
   <script>
     (function () {
       const audio = document.getElementById('reflectionAudio');
