--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -61,13 +61,13 @@
       font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
     }
 
-    /* Space so content doesn’t hide under fixed header bar */
+    /* Space so content doesn’t hide under fixed 2-row header */
     .page-spacer{
       height:0;
-      margin-top:4.8rem;
+      margin-top:7.2rem;  /* was 4.8rem – increased so audio/card start below header */
     }
     @media (min-width:768px){
-      .page-spacer{ margin-top:5.3rem; }
+      .page-spacer{ margin-top:8.2rem; }
     }
 
     /* ===== Audio section ===== */
@@ -214,7 +214,6 @@
 <body>
 
   <!-- ============ TOP HEADER BAR HOOK ============ -->
-  <!-- IMPORTANT: data-current matches this reflection's slug -->
   <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
 
   <div class="page-spacer"></div>
@@ -223,7 +222,6 @@
   <section class="audio-shell">
     <div class="audio-player">
       <audio id="reflectionAudio" controls preload="metadata">
-        <!-- Default audio track (Track 1) -->
         <source id="audioSource"
                 src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
                 type="audio/mpeg">
@@ -268,7 +266,6 @@
         On belief, truth, and the mystery that cannot be named.
       </div>
 
-      <!-- Reflection text -->
       <p class="dropcap">
         Anyone who claims to know the full truth about God speaks from
         illusion. For how can the finite explain the infinite? How can a
@@ -331,16 +328,12 @@
           const newSrc = row.getAttribute('data-src');
           if (!newSrc) return;
 
-          // Update active state
           rows.forEach(r => r.classList.remove('is-active'));
           row.classList.add('is-active');
 
-          // Swap audio file
           source.src = newSrc;
           audio.load();
-          audio.play().catch(() => {
-            // ignore autoplay block
-          });
+          audio.play().catch(() => {});
         });
       });
     })();
@@ -352,9 +345,7 @@
       window.addEventListener('load', function () {
         navigator.serviceWorker
           .register('/reflections/sw.js')
-          .catch(function () {
-            // silent fail; page still works
-          });
+          .catch(function () {});
       });
     }
   </script>
