--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -61,19 +61,21 @@
       font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
     }
 
-    /* Space so content doesn’t hide under fixed 2-row header */
+    /* Space so content doesn’t hide under fixed header */
     .page-spacer{
       height:0;
-      margin-top:7.2rem;  /* was 4.8rem – increased so audio/card start below header */
+      margin-top:8.4rem;        /* tuned for taller header */
     }
     @media (min-width:768px){
-      .page-spacer{ margin-top:8.2rem; }
+      .page-spacer{
+        margin-top:9.4rem;
+      }
     }
 
-    /* ===== Audio section ===== */
+    /* ===== Audio section (compact so header feels stronger) ===== */
     .audio-shell{
       max-width:900px;
-      margin:0 auto 2.2rem auto;
+      margin:0 auto 1.8rem auto;
       padding:0 1.2rem;
       box-sizing:border-box;
     }
@@ -83,9 +85,9 @@
 
     .audio-player{
       background:#151010;
-      border-radius:18px 18px 0 0;
-      padding:1.1rem 1.4rem;
-      box-shadow:0 16px 40px rgba(0,0,0,.55);
+      border-radius:14px 14px 0 0;
+      padding:.75rem 1rem;
+      box-shadow:0 10px 26px rgba(0,0,0,.5);
       border:1px solid #000;
       border-bottom:none;
     }
@@ -96,10 +98,10 @@
 
     .track-list{
       background:#1d1411;
-      border-radius:0 0 18px 18px;
+      border-radius:0 0 14px 14px;
       border:1px solid #000;
       border-top:1px solid #2a1a13;
-      box-shadow:0 18px 40px rgba(0,0,0,.65);
+      box-shadow:0 12px 28px rgba(0,0,0,.6);
       overflow:hidden;
     }
 
@@ -109,8 +111,8 @@
       justify-content:space-between;
       width:100%;
       text-align:left;
-      padding:1rem 1.4rem 1.05rem;
-      gap:.9rem;
+      padding:.6rem 1rem .7rem;
+      gap:.75rem;
       border:none;
       background:transparent;
       color:var(--ink);
@@ -122,19 +124,19 @@
 
     .track-main{
       font-family:"Georgia","Times New Roman",serif;
-      font-size:1.02rem;
+      font-size:.96rem;
       font-weight:600;
     }
     .track-meta{
-      font-size:.86rem;
+      font-size:.8rem;
       color:var(--muted);
-      margin-top:.22rem;
+      margin-top:.18rem;
     }
     .track-duration{
-      font-size:.9rem;
+      font-size:.84rem;
       white-space:nowrap;
       margin-left:auto;
-      padding-top:.25rem;
+      padding-top:.2rem;
       color:var(--muted);
     }
 
