--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -15,8 +15,7 @@
 
   <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
   <meta property="og:type" content="article">
-  <meta property="og:title"
-        content="The Paradox of God — Solitude Reflections">
+  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
   <meta property="og:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta property="og:image"
@@ -35,19 +34,18 @@
   <meta name="theme-color" content="#ff6b3d">
   <link rel="manifest" href="/reflections/manifest.json">
   <link rel="icon" href="/reflections/assets/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180"
-        href="/reflections/icon-180.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/reflections/icon-180.png">
 
-  <!-- ================= SHARED HEADER CSS (SAME FOR ALL) ================= -->
+  <!-- ================= SHARED HEADER CSS ================= -->
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css" />
 
   <style>
-    /* ===== Palette (warm, bookish) ===== */
+    /* ===== Global Page Settings ===== */
     :root{
-      --bg:#1f1815;
-      --paper:#2a211e;
-      --ink:#f3e6dd;
-      --muted:#c9b0a4;
+      --bg:#f6f2ed;        /* NEW — light page background */
+      --paper:#2a211e;     /* reading card stays dark */
+      --ink:#1a120f;
+      --muted:#8c6f62;
       --accent:#ffb873;
       --accent-soft:#412017;
       --rule:#6b4b3c;
@@ -56,15 +54,15 @@
     html,body{
       margin:0;
       padding:0;
-      background:var(--bg);
+      background:var(--bg);   /* light warm background */
       color:var(--ink);
       font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
     }
 
-    /* Space so content doesn’t hide under fixed header */
+    /* Offset under FIXED header */
     .page-spacer{
       height:0;
-      margin-top:8.4rem;        /* tuned for taller header */
+      margin-top:8.4rem;
     }
     @media (min-width:768px){
       .page-spacer{
@@ -72,10 +70,10 @@
       }
     }
 
-    /* ===== Audio section (compact so header feels stronger) ===== */
+    /* ===== AUDIO PLAYER (SLIMMER VERSION) ===== */
     .audio-shell{
       max-width:900px;
-      margin:0 auto 1.8rem auto;
+      margin:0 auto 1.6rem auto;
       padding:0 1.2rem;
       box-sizing:border-box;
     }
@@ -85,9 +83,9 @@
 
     .audio-player{
       background:#151010;
-      border-radius:14px 14px 0 0;
-      padding:.75rem 1rem;
-      box-shadow:0 10px 26px rgba(0,0,0,.5);
+      border-radius:12px 12px 0 0;
+      padding:.55rem .9rem;       /* reduced */
+      box-shadow:0 8px 22px rgba(0,0,0,.45);
       border:1px solid #000;
       border-bottom:none;
     }
@@ -98,10 +96,10 @@
 
     .track-list{
       background:#1d1411;
-      border-radius:0 0 14px 14px;
+      border-radius:0 0 12px 12px;
       border:1px solid #000;
       border-top:1px solid #2a1a13;
-      box-shadow:0 12px 28px rgba(0,0,0,.6);
+      box-shadow:0 10px 24px rgba(0,0,0,.55);
       overflow:hidden;
     }
 
@@ -110,12 +108,11 @@
       align-items:flex-start;
       justify-content:space-between;
       width:100%;
-      text-align:left;
-      padding:.6rem 1rem .7rem;
-      gap:.75rem;
+      padding:.45rem .9rem .5rem;   /* smaller height */
+      gap:.6rem;
       border:none;
       background:transparent;
-      color:var(--ink);
+      color:#f3e6dd;
       cursor:pointer;
       font:inherit;
       border-bottom:1px solid rgba(255,255,255,.04);
@@ -124,34 +121,28 @@
 
     .track-main{
       font-family:"Georgia","Times New Roman",serif;
-      font-size:.96rem;
+      font-size:.9rem;       /* reduced */
       font-weight:600;
     }
     .track-meta{
-      font-size:.8rem;
-      color:var(--muted);
-      margin-top:.18rem;
+      font-size:.75rem;      /* reduced */
+      color:#c9b0a4;
+      margin-top:.14rem;
     }
     .track-duration{
-      font-size:.84rem;
+      font-size:.78rem;      /* reduced */
       white-space:nowrap;
       margin-left:auto;
-      padding-top:.2rem;
-      color:var(--muted);
+      padding-top:.15rem;
+      color:#c9b0a4;
     }
 
     .track-row.is-active{
       background:var(--accent-soft);
-      box-shadow:inset 0 0 0 1px rgba(255,184,115,.55);
-    }
-    .track-row.is-active .track-duration{
-      color:var(--ink);
-    }
-    .track-row:active{
-      transform:scale(.99);
+      box-shadow:inset 0 0 0 1px rgba(255,184,115,.5);
     }
 
-    /* ===== Reading card ===== */
+    /* ===== READING CARD ===== */
     .page-shell{
       max-width:900px;
       margin:0 auto 4rem auto;
@@ -169,12 +160,7 @@
       box-shadow:0 18px 40px rgba(0,0,0,.45);
       line-height:1.7;
       font-size:1.02rem;
-    }
-    @media (min-width:768px){
-      .reading-card{
-        padding:2.5rem 2.7rem 3rem;
-        font-size:1.06rem;
-      }
+      color:#f3e6dd;
     }
 
     h1{
@@ -187,7 +173,7 @@
     .subtitle{
       font-family:"Georgia","Times New Roman",serif;
       font-style:italic;
-      color:var(--muted);
+      color:#c9b0a4;
       margin-bottom:2rem;
       font-size:.98rem;
     }
@@ -227,7 +213,6 @@
         <source id="audioSource"
                 src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
                 type="audio/mpeg">
-        Your browser does not support the audio element.
       </audio>
     </div>
 
@@ -237,9 +222,7 @@
               data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
         <div>
           <div class="track-main">The Paradox of God</div>
-          <div class="track-meta">
-            Main narration — quiet, reflective reading.
-          </div>
+          <div class="track-meta">Main narration — quiet, reflective reading.</div>
         </div>
         <div class="track-duration">04:08</div>
       </button>
@@ -249,9 +232,7 @@
               data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3?v=1">
         <div>
           <div class="track-main">The Paradox of God (Alternate Voice)</div>
-          <div class="track-meta">
-            Alternate or cinematic voice version of the same reflection.
-          </div>
+          <div class="track-meta">Alternate or cinematic voice version.</div>
         </div>
         <div class="track-duration">04:33</div>
       </button>
@@ -294,14 +275,14 @@
         This is the paradox: we long to know, to define, to be sure — and
         yet whatever is truly infinite cannot be fully captured by a mind
         that forgets, misremembers, and fears. Our language reaches upward
-        like a child’s hand toward the sky: sincere, but never complete.
+        like a child's hand toward the sky: sincere, but never complete.
       </p>
 
       <p>
         Perhaps the honest path is not to cling to perfect answers, but to
-        walk with a humble question. Not “I know what God is,” but
-        “Whatever the Truth is, let it find me changing.” Not a system to
-        defend, but a mystery to live inside.
+        walk with a humble question. Not “I know what God is,” but “Whatever
+        the Truth is, let it find me changing.” Not a system to defend, but a
+        mystery to live inside.
       </p>
 
       <hr>
@@ -312,6 +293,7 @@
         possibility that the most sacred answer might be:
         <em>“I do not know — but I am listening.”</em>
       </p>
+
     </article>
   </main>
 
@@ -341,15 +323,14 @@
     })();
   </script>
 
-  <!-- ============ SERVICE WORKER (SAME FOR ALL PAGES) ============ -->
+  <!-- ============ SERVICE WORKER ============ -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker
-          .register('/reflections/sw.js')
-          .catch(function () {});
+        navigator.serviceWorker.register('/reflections/sw.js');
       });
     }
   </script>
+
 </body>
 </html>
