--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -70,77 +70,77 @@
       }
     }
 
-    /* ===== AUDIO PLAYER (SLIMMER VERSION) ===== */
-    .audio-shell{
-      max-width:900px;
-      margin:0 auto 1.6rem auto;
-      padding:0 1.2rem;
-      box-sizing:border-box;
-    }
-    @media (min-width:768px){
-      .audio-shell{ padding:0; }
-    }
+    /* ===== AUDIO PLAYER (SUPER SLIM VERSION) ===== */
 
-    .audio-player{
-      background:#151010;
-      border-radius:12px 12px 0 0;
-      padding:.55rem .9rem;       /* reduced */
-      box-shadow:0 8px 22px rgba(0,0,0,.45);
-      border:1px solid #000;
-      border-bottom:none;
-    }
-    .audio-player audio{
-      width:100%;
-      display:block;
-    }
+.audio-shell{
+  max-width:900px;
+  margin:0 auto 1.2rem auto; /* tighter bottom spacing */
+  padding:0 1.2rem;
+  box-sizing:border-box;
+}
+@media (min-width:768px){
+  .audio-shell{ padding:0; }
+}
 
-    .track-list{
-      background:#1d1411;
-      border-radius:0 0 12px 12px;
-      border:1px solid #000;
-      border-top:1px solid #2a1a13;
-      box-shadow:0 10px 24px rgba(0,0,0,.55);
-      overflow:hidden;
-    }
+.audio-player{
+  background:#151010;
+  border-radius:10px 10px 0 0;
+  padding:.4rem .7rem;        /* VERY SLIM */
+  box-shadow:0 6px 16px rgba(0,0,0,.4);
+  border:1px solid #000;
+  border-bottom:none;
+}
+.audio-player audio{
+  width:100%;
+  display:block;
+}
 
-    .track-row{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      width:100%;
-      padding:.45rem .9rem .5rem;   /* smaller height */
-      gap:.6rem;
-      border:none;
-      background:transparent;
-      color:#f3e6dd;
-      cursor:pointer;
-      font:inherit;
-      border-bottom:1px solid rgba(255,255,255,.04);
-    }
-    .track-row:last-child{ border-bottom:none; }
+/* Track List Slim */
+.track-list{
+  background:#1d1411;
+  border-radius:0 0 10px 10px;
+  border:1px solid #000;
+  border-top:1px solid #2a1a13;
+  box-shadow:0 8px 18px rgba(0,0,0,.55);
+  overflow:hidden;
+}
 
-    .track-main{
-      font-family:"Georgia","Times New Roman",serif;
-      font-size:.9rem;       /* reduced */
-      font-weight:600;
-    }
-    .track-meta{
-      font-size:.75rem;      /* reduced */
-      color:#c9b0a4;
-      margin-top:.14rem;
-    }
-    .track-duration{
-      font-size:.78rem;      /* reduced */
-      white-space:nowrap;
-      margin-left:auto;
-      padding-top:.15rem;
-      color:#c9b0a4;
-    }
+/* SUPER SLIM track rows */
+.track-row{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:.32rem .65rem;      /* WAS .45 and .9 — now very slim */
+  gap:.5rem;
+  background:transparent;
+  border-bottom:1px solid rgba(255,255,255,.05);
+  font-size:.82rem;           /* smaller font */
+}
+.track-row:last-child{
+  border-bottom:none;
+}
 
-    .track-row.is-active{
-      background:var(--accent-soft);
-      box-shadow:inset 0 0 0 1px rgba(255,184,115,.5);
-    }
+.track-main{
+  font-size:.84rem;           /* smaller */
+  font-weight:600;
+}
+.track-meta{
+  font-size:.7rem;            /* much slimmer */
+  color:#c9b0a4;
+  margin-top:.1rem;
+}
+.track-duration{
+  font-size:.75rem;           /* slimmer */
+  padding-top:.05rem;
+  white-space:nowrap;
+  color:#c9b0a4;
+}
+
+/* Active track highlight */
+.track-row.is-active{
+  background:#3b241e;
+  box-shadow:inset 0 0 0 1px rgba(255,184,115,.45);
+}
 
     /* ===== READING CARD ===== */
     .page-shell{
