--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -37,7 +37,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/reflections/icon-180.png">
 
   <!-- ================= SHARED HEADER CSS ================= -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=3" />
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=4" />
 
   <style>
     /* ===== Global Page Settings (ONLY for body + reading card) ===== */
@@ -70,24 +70,29 @@
       }
     }
 
-    /* ===== AUDIO PLAYER (SUPER SLIM VERSION) ===== */
+    /* ===== AUDIO PLAYER (FRAMED LIKE A MEDIA PLAYER) ===== */
     .audio-shell{
       max-width:900px;
-      margin:0 auto 1.2rem auto;
-      padding:0 1.2rem;
+      margin:1rem 1rem 1.5rem;
+      padding:0;
       box-sizing:border-box;
+
+      background:#1b1310;
+      border-radius:16px;
+      box-shadow:0 12px 28px rgba(0,0,0,.55);
     }
     @media (min-width:768px){
-      .audio-shell{ padding:0; }
+      .audio-shell{
+        margin:1.5rem auto 2rem;
+      }
     }
 
     .audio-player{
       background:#151010;
-      border-radius:10px 10px 0 0;
+      border-radius:16px 16px 0 0;
       padding:.4rem .7rem;
-      box-shadow:0 6px 16px rgba(0,0,0,.4);
-      border:1px solid #000;
-      border-bottom:none;
+      box-shadow:0 0 0 rgba(0,0,0,0); /* shadow handled by outer shell */
+      border-bottom:1px solid #000;
     }
     .audio-player audio{
       width:100%;
@@ -96,10 +101,9 @@
 
     .track-list{
       background:#1d1411;
-      border-radius:0 0 10px 10px;
-      border:1px solid #000;
+      border-radius:0 0 16px 16px;
       border-top:1px solid #2a1a13;
-      box-shadow:0 8px 18px rgba(0,0,0,.55);
+      box-shadow:0 0 0 rgba(0,0,0,0);
       overflow:hidden;
     }
 
@@ -229,19 +233,17 @@
     <div class="ref-nav-panel" id="refNavPanel">
       <div class="ref-nav-title">All Reflections</div>
       <ul class="ref-nav-list">
-        <!-- Mark this page as current with class="is-current" -->
         <li><a href="/reflections/pages/the-paradox-of-god/read.html" class="is-current">The Paradox of God</a></li>
-        <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
         <li><a href="/reflections/pages/the-divine-premise/read.html">The Divine Premise</a></li>
         <li><a href="/reflections/pages/the-subconscious-mind/read.html">The Subconscious Mind</a></li>
         <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
         <li><a href="/reflections/pages/the-prayer/read.html">The Prayer — The Inner Listener</a></li>
         <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
         <li><a href="/reflections/pages/the-madness-of-faith/read.html">The Madness of Faith</a></li>
+        <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
         <li><a href="/reflections/pages/belief-and-goodness/read.html">Belief and Goodness</a></li>
         <li><a href="/reflections/pages/seeking-assurance/read.html">Seeking Assurance is Labeled a Sinner</a></li>
         <li><a href="/reflections/pages/the-initial-premise-of-a-perfect-loving-god/read.html">The Initial Premise of a Perfect Loving God</a></li>
-        <!-- Add any other pages you like -->
       </ul>
     </div>
   </header>
@@ -341,15 +343,31 @@
     </article>
   </main>
 
-  <!-- ============ SIMPLE HEADER SCRIPT (HAMBURGER + TRACK SWITCH) ============ -->
+  <!-- ============ SIMPLE HEADER + TRACK SCRIPT ============ -->
   <script>
     (function () {
-      // Hamburger toggle
-      const ham = document.getElementById('refHam');
+      // Hamburger toggle + click outside to close
+      const ham   = document.getElementById('refHam');
       const panel = document.getElementById('refNavPanel');
+
       if (ham && panel) {
-        ham.addEventListener('click', () => {
+        ham.addEventListener('click', (e) => {
+          e.stopPropagation();     // don't trigger document click
           panel.classList.toggle('show');
+        });
+
+        // Close when clicking anywhere outside menu or hamburger
+        document.addEventListener('click', (e) => {
+          if (!panel.classList.contains('show')) return;
+          if (panel.contains(e.target) || ham.contains(e.target)) return;
+          panel.classList.remove('show');
+        });
+
+        // Close with ESC key (optional but nice)
+        document.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape' && panel.classList.contains('show')) {
+            panel.classList.remove('show');
+          }
         });
       }
 
