--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -121,11 +121,11 @@
       display:flex;
       align-items:flex-start;
       justify-content:space-between;
-      padding:.38rem .85rem;
-      gap:.6rem;
+      padding:.38rem 1rem;
+      gap:.4rem;
 
       width:100%;
-      margin:0;
+      margin:1.5;
       border:none;
       background:transparent;
       text-align:left;
