--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -91,7 +91,7 @@
     .audio-player{
       background:#151010;
       border-radius:16px 16px 0 0;
-      padding:.4rem .7rem;
+      padding:2rem 3.5rem;
       border-bottom:1px solid #000;
     }
     .audio-player audio{
