--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -259,17 +259,23 @@
     <div class="ref-nav-panel" id="refNavPanel">
       <div class="ref-nav-title">All Reflections</div>
       <ul class="ref-nav-list">
-        <li><a href="/reflections/pages/the-paradox-of-god/read.html" class="is-current">The Paradox of God</a></li>
-        <li><a href="/reflections/pages/the-divine-premise/read.html">The Divine Premise</a></li>
-        <li><a href="/reflections/pages/the-subconscious-mind/read.html">The Subconscious Mind</a></li>
-        <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-        <li><a href="/reflections/pages/the-prayer/read.html">The Prayer — The Inner Listener</a></li>
-        <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
-        <li><a href="/reflections/pages/the-madness-of-faith/read.html">The Madness of Faith</a></li>
-        <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
-        <li><a href="/reflections/pages/belief-and-goodness/read.html">Belief and Goodness</a></li>
-        <li><a href="/reflections/pages/seeking-assurance/read.html">Seeking Assurance is Labeled a Sinner</a></li>
-        <li><a href="/reflections/pages/the-initial-premise-of-a-perfect-loving-god/read.html">The Initial Premise of a Perfect Loving God</a></li>
+        <li><a href="/reflections/index.html">HOME</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
+          <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html" active">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+          <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
+          <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+          <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
+          <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
       </ul>
     </div>
   </header>
