--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -72,9 +72,9 @@
 
     /* ===== AUDIO PLAYER (FRAMED LIKE A MEDIA PLAYER) ===== */
     .audio-shell{
-      max-width:900px;
+      max-width:800px;
       margin:1rem 1rem 1.5rem;
-      padding:0;
+      padding:1.5rem;
       box-sizing:border-box;
 
       background:#120d0b;
@@ -184,8 +184,8 @@
 
     /* ===== READING CARD ===== */
     .page-shell{
-      max-width:900px;
-      margin:0 auto 4rem auto;
+      max-width:1000px;
+      margin:0 auto 2rem auto;
       padding:0 1.2rem 3rem;
       box-sizing:border-box;
     }
@@ -196,7 +196,7 @@
     .reading-card{
       background:var(--paper);
       border-radius:18px;
-      padding:2rem 1.5rem 2.5rem;
+      padding:1.5rem 0.8rem 1.5rem;
       box-shadow:0 18px 40px rgba(0,0,0,.45);
       line-height:1.7;
       font-size:1.02rem;
@@ -235,7 +235,7 @@
     hr{
       border:none;
       border-top:1px solid var(--rule);
-      margin:1.8rem 0;
+      margin:1rem 0;
     }
   </style>
 </head>
@@ -284,15 +284,7 @@
 
   <!-- ============ AUDIO + PLAYLIST ============ -->
   <section class="audio-shell" id="audioSection">
-    <div class="audio-player">
-      <audio id="reflectionAudio" controls preload="metadata">
-        <source id="audioSource"
-                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
-                type="audio/mpeg">
-      </audio>
-    </div>
-
-    <div class="track-list" id="trackList">
+     <div class="track-list" id="trackList">
       <div class="track-header">Playlist</div>
 
       <!-- TRACK 1 -->
@@ -316,6 +308,13 @@
         </div>
         <div class="track-duration">04:33</div>
       </button>
+    </div>
+    <div class="audio-player">
+      <audio id="reflectionAudio" controls preload="metadata">
+        <source id="audioSource"
+                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
+                type="audio/mpeg">
+      </audio>
     </div>
   </section>
 
