--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -70,11 +70,11 @@
       }
     }
 
-    /* ===== AUDIO PLAYER (FRAMED LIKE A MEDIA PLAYER) ===== */
+    /* ===== AUDIO PLAYER (FRAMED) ===== */
     .audio-shell{
-      max-width:800px;
-      margin:1rem 1rem 1.5rem;
-      padding:1.5rem;
+      max-width:900px;
+      margin:1rem 1.5rem 1.5rem;
+      padding:1rem;
       box-sizing:border-box;
 
       background:#120d0b;
@@ -91,7 +91,7 @@
     .audio-player{
       background:#151010;
       border-radius:16px 16px 0 0;
-      padding:2rem 3.5rem;
+      padding:.4rem .7rem;
       border-bottom:1px solid #000;
     }
     .audio-player audio{
@@ -108,11 +108,76 @@
 
     .track-header{
       padding:.4rem .8rem .2rem;
-      font-size:.78rem;
+      font-size:.70rem;
       text-transform:uppercase;
       letter-spacing:.12em;
       color:#c9b0a4;
       opacity:.9;
+    }
+
+    .track-row{
+      position:relative;
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      padding:.38rem 2rem;
+      gap:.4rem;
+
+      width:100%;
+      margin:0;
+      border:none;
+      background:transparent;
+      text-align:left;
+      cursor:pointer;
+
+      font-size:.85rem;
+      color:#f3e6dd;
+      border-top:1px solid rgba(255,255,255,.04);
+    }
+    .track-row:first-of-type{
+      border-top:1px solid rgba(255,255,255,.08);
+    }
+
+    .track-row:focus-visible{
+      outline:1px solid #ffb873;
+      outline-offset:2px;
+    }
+
+    .track-row::before{
+      content:"";
+      flex-shrink:0;
+      width:6px;
+      height:6px;
+      border-radius:50%;
+      background:#7b5d4b;
+      margin-top:.45rem;
+      margin-right:.5rem;
+    }
+
+    .track-main{
+      font-size:.9rem;
+      font-weight:600;
+    }
+    .track-meta{
+      font-size:.75rem;
+      color:#c9b0a4;
+      margin-top:.1rem;
+    }
+    .track-duration{
+      font-size:.8rem;
+      padding-top:.25rem;
+      white-space:nowrap;
+      color:#c9b0a4;
+      flex-shrink:0;
+      margin-left:.5rem;
+    }
+
+    .track-row.is-active{
+      background:#3b241e;
+      box-shadow:inset 0 0 0 1px rgba(255,184,115,.45);
+    }
+    .track-row.is-active::before{
+      background:#ffb873;
     }
 
     /* RESET button look + SLIM playlist-style rows */
