--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -310,7 +310,7 @@
   <header class="ref-header-shell">
     <div class="ref-header-inner">
       <img class="ref-header-cover"
-           src="/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg"
+           src="/reflections/pages/the-paradox-of-god/paradoxsmall.jpg"
            alt="The Paradox of God cover">
 
       <div class="ref-header-title-wrap">
@@ -358,7 +358,7 @@
               data-src="/reflections/pages/the-paradox-of-god/godparadox.mp3?v=1">
         <div>
           <div class="track-main">The Paradox of God</div>
-          <div class="track-meta">Main narration — quiet, reflective reading.</div>
+          <div class="track-meta">Main narration — quiet.</div>
         </div>
         <div class="track-duration">04:08</div>
       </button>
@@ -368,8 +368,8 @@
               type="button"
               data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
         <div>
-          <div class="track-main">The Paradox of God (Alternate Voice)</div>
-          <div class="track-meta">Alternate or cinematic voice version.</div>
+          <div class="track-main">The devine premise</div>
+          <div class="track-meta">Alternate</div>
         </div>
         <div class="track-duration">04:33</div>
       </button>
