--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -5,26 +5,26 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- ================= SEO (SPECIFIC TO THIS REFLECTION) ================= -->
-  <title>The Paradox of God -- Solitude Reflections · Ninox Antolihao</title>
+  <title>The Deity -- Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description"
-        content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
+        content="A Gnostic reflection on the true Divine.">
 
   <link rel="canonical"
-        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        href="https://stonegrillresto.net/reflections/pages/diety/read.html">
 
   <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Paradox of God -- Solitude Reflections">
+  <meta property="og:title" content="The Deity -- Solitude Reflections">
   <meta property="og:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta property="og:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+        content="https://stonegrillresto.net/reflections/pages/diety/diety.jpg">
   <meta property="og:url"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        content="https://stonegrillresto.net/reflections/pages/diety/read.html">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Paradox of God -- Solitude Reflections">
+  <meta name="twitter:title" content="The Deity-- Solitude Reflections">
   <meta name="twitter:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta name="twitter:image"
@@ -37,7 +37,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/reflections/icon-180.png">
 
   <!-- ================= SHARED HEADER CSS ================= -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=5" />
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=15" />
 
   <style>
     /* ===== Global Page Settings (ONLY for body + reading card) ===== */
@@ -310,7 +310,7 @@
   <header class="ref-header-shell">
     <div class="ref-header-inner">
       <img class="ref-header-cover"
-           src="/reflections/pages/the-paradox-of-god/paradoxsmall.jpg"
+           src="/reflections/pages/diety/diety.jpg"
            alt="The Paradox of God cover">
 
       <div class="ref-header-title-wrap">
@@ -366,9 +366,9 @@
       <!-- TRACK 2 -->
       <button class="track-row"
               type="button"
-              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
+              data-src="/reflections/pages/diety/diety.mp3?v=1">
         <div>
-          <div class="track-main">The devine premise</div>
+          <div class="track-main">The Deity</div>
           <div class="track-meta">Alternate</div>
         </div>
         <div class="track-duration">04:33</div>
@@ -377,7 +377,7 @@
     <div class="audio-player">
       <audio id="reflectionAudio" controls preload="metadata">
         <source id="audioSource"
-                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
+                src="/reflections/pages/diety/diety.mp3?v=1"
                 type="audio/mpeg">
       </audio>
     </div>
@@ -387,7 +387,7 @@
   <main class="page-shell">
     <article class="reading-card">
 
-      <h1>The Paradox of God</h1>
+      <h1>The DEITY</h1>
       <div class="subtitle">
         A Solitude Reflection by Ninox Antolihao<br>
         On belief, truth, and the mystery that cannot be named.
