--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -72,7 +72,7 @@
 
     /* ===== AUDIO PLAYER (FRAMED) ===== */
     .audio-shell{
-      max-width:900px;
+      max-width:700px;
       margin:1rem 1.5rem 1.5rem;
       padding:1rem;
       box-sizing:border-box;
@@ -90,8 +90,8 @@
 
     .audio-player{
       background:#151010;
-      border-radius:16px 16px 0 0;
-      padding:.4rem .7rem;
+      border-radius:27px 27px 0 0;
+      padding:0.9rem 0.7rem;
       border-bottom:1px solid #000;
     }
     .audio-player audio{
@@ -101,8 +101,8 @@
 
     .track-list{
       background:#1d1411;
-      border-radius:0 0 16px 16px;
-      border-top:1px solid #2a1a13;
+      border-radius:0 0 27px 27px;
+      border-top:2px solid #2a1a13;
       overflow:hidden;
     }
 
