--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -250,12 +250,12 @@
     /* ===== READING CARD ===== */
     .page-shell{
       max-width:1000px;
-      margin:0 auto 2rem auto;
-      padding:0 1.2rem 3rem;
+      margin:0 auto 1rem auto;
+      padding:0 1.2rem 1rem;
       box-sizing:border-box;
     }
     @media (min-width:768px){
-      .page-shell{ padding:0 0 4rem; }
+      .page-shell{ padding:0 0 2.5rem; }
     }
 
     .reading-card{
@@ -357,7 +357,7 @@
               type="button"
               data-src="/reflections/pages/the-paradox-of-god/godparadox.mp3?v=1">
         <div>
-          <div class="track-main">The Paradox of God</div>
+          <div class="track-main">The Deity</div>
           <div class="track-meta">Main narration -- quiet.</div>
         </div>
         <div class="track-duration">04:08</div>
